# ar-tu-do

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Doxyfile  README.md
.github/workflows/: main.yml
backup/: README.md
cuda/examples/: hello_world.cu  hello_world_gpu_multi.cu  simple_addition
doc/: rqt-results.ods  trackcalculator.html
doc/cuda/examples/: hello_world  hello_world_gpu  hello_world_gpu.cu  hello_world_gpu_multi  matrix_addition  matrix_addition.cu  simple_addition.cu  vector_addition  vector_addition.cu
doc/results/report/: README.md
ros_ws/: ._toad.sh  .gitignore  toad.example  toad.functions  toad.md  toad.sh
ros_ws/launch/: bruteforce-play.launch  bruteforce.launch  camera-test.launch  car_evolutionary.launch  car_q_learning_drive.launch  car_wallfollowing.launch  gazebo-cli.launch  gazebo.launch  gazebo_nogpu.launch  q_learning_time_reward.launch  q_learning_time_reward_drive.launch  q_learning_time_reward_train.launch  report-sim-current.launch  report-sim-old.launch  rosbag.launch  simulator_wallfollowing.launch  zed.launch  zed_720.launch  zed_camera_nodelet.launch  zed_camera_nodelet_720.launch
ros_ws/launch/zed_cfg/: common.yaml  common_720.yaml  zed.yaml
ros_ws/src/analysis-tools/: CMakeLists.txt  package.xml
ros_ws/src/analysis-tools/include/: bruteforce_reward.h  config.h  log_stats.h  speed_info.h
ros_ws/src/analysis-tools/src/: bruteforce_reward.cpp  log_stats.cpp  process_track.cpp  speed_info.cpp
ros_ws/src/autonomous/avoid_static_obstacles/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/avoid_static_obstacles/include/: avoid_static_obstacles.h
ros_ws/src/autonomous/avoid_static_obstacles/launch/: avoid_static_obstacles.launch
ros_ws/src/autonomous/avoid_static_obstacles/src/: avoid_static_obstacles.cpp
ros_ws/src/autonomous/boxing/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/cam_lidar_fusion/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/camera_to_pointcloud/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/camera_to_pointcloud/include/: camera_to_pointcloud.h
ros_ws/src/autonomous/camera_to_pointcloud/src/: camera_to_pointcloud.cpp
ros_ws/src/autonomous/depthimage_to_laserscan_meta/: package.xml
ros_ws/src/autonomous/driving/wallfollowing5/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/driving/wallfollowing5/cfg/: pid.cfg  steering.cfg  wallfollowing.cfg
ros_ws/src/autonomous/driving/wallfollowing5/include/: config.h  pid_controller.h  process_track.h  rviz_geometry.h  speed_controller.h  steering_controller.h  wallfollowing.h
ros_ws/src/autonomous/driving/wallfollowing5/launch/: autonomous_driving_physical.launch
ros_ws/src/autonomous/driving/wallfollowing5/src/: pid_controller.cpp  process_track.cpp  rviz_geometry.cpp  speed_controller.cpp  steering_controller.cpp  wallfollowing.cpp
ros_ws/src/autonomous/jsk_rviz_plugins_meta/: package.xml
ros_ws/src/autonomous/recognition/boxing/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/recognition/boxing/cfg/: boxing.cfg
ros_ws/src/autonomous/recognition/boxing/include/: boxing.h
ros_ws/src/autonomous/recognition/boxing/launch/: pat.launch  test.launch
ros_ws/src/autonomous/recognition/boxing/src/: boxing.cpp
ros_ws/src/autonomous/recognition/voxel_classifier/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/recognition/voxel_classifier/cfg/: voxel_classifier.cfg
ros_ws/src/autonomous/recognition/voxel_classifier/include/: dbscan.h  voxel_classifier.h
ros_ws/src/autonomous/recognition/voxel_classifier/src/: dbscan.cpp  voxel_classifier.cpp
ros_ws/src/autonomous/recognition/wall_detection/: CMakeLists.txt
ros_ws/src/autonomous/recognition/wall_detection/cfg/: wall_detection.cfg
ros_ws/src/autonomous/recognition/wall_detection/include/: wall_detection.h  walls.h
ros_ws/src/autonomous/recognition/wall_detection/src/: wall_detection.cpp
ros_ws/src/autonomous/reinforcement_learning/: q_learning_time_reward.to
ros_ws/src/autonomous/reinforcement_learning2/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/store_training_data/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/store_training_data/cfg/: store_training_data.cfg
ros_ws/src/autonomous/store_training_data/launch/: store_training_data.launch
ros_ws/src/autonomous/store_training_data/script/: store_training_data.py
ros_ws/src/autonomous/voxel_classifier/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wall_detection/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wall_detection/cfg/: wall_detection.cfg
ros_ws/src/autonomous/wall_detection/include/: rviz_geometry_publisher.h  voxel.h  wall_detection.h
ros_ws/src/autonomous/wall_detection/launch/: wall_detection.launch
ros_ws/src/autonomous/wall_detection/src/: rviz_geometry_publisher.cpp  wall_detection.cpp
ros_ws/src/autonomous/wall_separation/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wallfollowing3/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wallfollowing4/: package.xml
ros_ws/src/autonomous/wallfollowing5/: CMakeLists.txt  package.xml
ros_ws/src/car_config/: CMakeLists.txt  package.xml
ros_ws/src/car_config/cfg/: dynamic_physical_properties.cfg
ros_ws/src/car_config/include/: physical_properties.h
ros_ws/src/car_control/: CMakeLists.txt  package.xml
ros_ws/src/car_control/include/: acceleration_controller.h  car_controller.h
ros_ws/src/car_control/launch/: car.rviz  (+1 more)
ros_ws/src/drive_msgs/: CMakeLists.txt  package.xml
ros_ws/src/teleoperation/: CMakeLists.txt
ros_ws/stats/: .gitignore  latex.sh  report.tex
ros_ws/stats/sim-old-20200515/: speed_over_time.csv
ros_ws/stats/tex/: main.tex  section.tex
ros_ws/videos/: stitch.sh
scripts/dev-setups/jhbruhn-bionic/: 0_install-toolchain.sh  1_clone-code.sh  Vagrantfile
scripts/hooks/pre-commit/: clang-format-staged-files.sh
scripts/travis/: check-format.sh
ssh/: Piet.pub  jhbruhn-haroldU18.pub  marcel-muthur.pub  marcel-rufus.pub  marvin-winlaptop.pub  marvin_ubuntulaptop.pub  patrick.pub  robin.pub  tg.pub
templates/tex/: compare.tex  main.tex  section.tex
(+516 files in other folders)
