<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>store_training_data</name>
  <version>0.0.0</version>
  <description>store training data in postgresDB</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>drive_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
