<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>wallfollowing5</name>
  <version>0.0.0</version>
  <description>Wallfollowing implemented in c++ based on modelling walls as circles</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>drive_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vesc_sim</depend>
  <depend>car_config</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>geometric_math</depend>
  <exec_depend>libpcl-all</exec_depend>
  <depend>boxing</depend>
  <depend>dynamic_reconfigure</depend>

</package>
