<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>boxing</name>
  <version>0.0.0</version>
  <description>Separate left and right walls using voxelization, also remove outliers.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>


  <depend>drive_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>debug_tools</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
</package>
